--- a/index.html
+++ b/index.html
@@ -52,51 +52,15 @@
                     <td>Froggy: 8</td>
                 </tr>
                 <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
+                    <td>flex-direction: column;</td>
+                    <td>Pone los elementos en columa</td>
+                    <td>Froggy: 9</td>
                 </tr>
                 <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
+                    <td>flex-direction: row-reverse;</td>
+                    <td>Pone los elementos de distinto orden de final a la principio</td>
+                    <td>Froggy: 10</td>
                 </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-                <tr>
-                    <td>Dato 2.1</td>
-                    <td>Dato 2.2</td>
-                    <td>Dato 2.3</td>
-                </tr>
-
             </tbody>
         </table>
     </main>
